Revision history for Perl extension CGI::Uploader.

2.90_03 Fri Dec 12 16:07:00 EST 2008
		- Fix up a few paths which still referred to CGI/Up (the intermediate name of V 2.90+)

2.90_02 Fri Dec 12 13:04:00 EST 2008
		- Redesign the handling of the transform option and the generate method.
		  Document and patch sample code to match

2.90_01 Thu Nov 27 10:51:00 EST 2008
		- Rewrite all code. New API.
		- Change EDT in this file to EST because the date parser rejects EDT

2.15 Sun Jul 15 07:21:24 EST 2007
    - no functionality changes

    [INTERNAL]
    - improved importing code style.
    - Clarify docs regarding file_scheme vs. file_name (Jaldhar)

2.14 Thu May 24 13:19:27 EST 2007

    [BUG FIXES]
    - Avoid SQL error when two column names are the same by giving explicit table name.

2.13 Mon Apr  9 22:39:54 EST 2007

    [BUG FIXES]	
    - Better Mac OS X detection (Jeff MacDonald)
    - gen_thumb() now works if Image::Magick or Graphics::Magick
      is not already loaded. (Thanks to bug report by Jeff MacDonald,
      RT#20775).

2.12 Thu Feb 15 17:43:20 EST 2007

    [ENHANCEMENTS]
    - Explicitly call File::Temp::cleanup(). This reduces the amount of 
      disk space and file handles used.

    - A new 'temp_dir' option has been added to allow to you set your own
      temporary directory. (Jeff MacDonald)

2.11 Mon Dec 19 20:18:00 EST 2005
    [BUG FIXES]
    - There were was confusion in the 2.1 release as to whether the new API
      for gen_thumb() took a hash or hashref as input. The code, tests and docs
      have all been updated to agree: It's a hashref. Thanks to bignose, who
      wrestled this one.

2.1 Sun Dec 18 21:39:23 EST 2005
    [ENHANCEMENTS]
    - Further simplified necessary spec API, while maintaining backwards
      compatibility.  Specifying a transformation method for a generated file
      can now by this simple: 

       gen_files => {
           photo_thumbnail =>  gen_thumb({ w => 100, h => 100}),
       }

